--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -10,30 +10,22 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Zeilen, die mit einem Semikolon beginnen sind Kommentare und werden ignoriert.
 ; Für jedes Zeugnis (Anlagen in der BASS) können hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
-; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zur den Optionen findet sich am Ende der Datei
+; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zu den Optionen findet sich am Ende der Datei
 ; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
 ;
 ; Format und Einstellungsdefinitionen vom 04.11.2019 (Plümper)
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
-
 ; Anlage 38: Abschlussprognose Gesamtschule
 [Anlage38]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=A
 ZeugnisDatumAngabe=30.12.1899
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenPersonen=S
+UnterschriftenPersonen=A
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
 
 ; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
@@ -56,7 +48,7 @@ WPBeginnASDJahrgang=07
 ; Anlage 41: Überweisungszeugnis Gesamtschule
 [Anlage41]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=E
+ZeugnisDatumQuelle=F  
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
 UnterschriftenMitNachnamen=J
@@ -128,21 +120,20 @@ SchulabschlussQuelle=H
 WPBeginnASDJahrgang=07
 
 
-
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; ZeugnisMitRand 
+; ZeugnisMitRand
 ; --------------
-; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
+; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
-; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 
+; legt fest, in welcher Jahrgansstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
+; Mögliche Angaben: 06 oder 07
 ;
 ;
 ; ZeugnisDatumQuelle
@@ -150,7 +141,7 @@ WPBeginnASDJahrgang=07
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
 ; Mögliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
-; K=Konferenzdatum des akt. Lernabschnittes 
+; K=Konferenzdatum des akt. Lernabschnittes
 ; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
 ; E=Entlassdatum
 ; S=Schulwechseldatum
@@ -163,32 +154,32 @@ WPBeginnASDJahrgang=07
 ; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
 ; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
-; ZeugnisInformationenQuelle 
+; ZeugnisInformationenQuelle
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
 ; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
-; 
-; ZeugnisInformationenWiederanfangAngabe 
+;
+; ZeugnisInformationenWiederanfangAngabe
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
-; ZeugnisInformationenElternsprechtagAngabe1 
+; ZeugnisInformationenElternsprechtagAngabe1
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
-; ZeugnisInformationenElternsprechtagAngabe2 
+; ZeugnisInformationenElternsprechtagAngabe2
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
 ; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
-; 
+;
 ; UnterschriftenPersonen
 ; ----------------------
 ; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt.
@@ -200,7 +191,7 @@ WPBeginnASDJahrgang=07
 ; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
-; UnterschriftenMitAmtsbezeichnungen 
+; UnterschriftenMitAmtsbezeichnungen
 ; ----------------------------------
 ; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
@@ -210,7 +201,7 @@ WPBeginnASDJahrgang=07
 ; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
-; UnterschriftenMitVornamenNurErster 
+; UnterschriftenMitVornamenNurErster
 ; ----------------------------------
 ; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
 ; Mögliche Angaben: J=Ja und N=Nein
@@ -228,7 +219,7 @@ WPBeginnASDJahrgang=07
 ;
 ; SchulabschlussQuelle
 ; ------------------
-; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
+; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen.
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
 ; Mögliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
