SVWS Zeugnisse NRW 2019-12-01
Kleinere Fehler in SK und RS behoben.
Paket der HS ergänzt.

--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 15.11.2019 (Plümper)
-; Enthalten sind die Einstellungen für die Anlagen 19-24 (Realschule/Peters)
+; Enthalten sind die Einstellungen für die Anlagen 31-37 (Gymnasium)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
@@ -15,8 +15,8 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
 
-; Anlage 19: Realschule: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-10.1
-[Anlage19]
+; Anlagen 12 und 13: Hauptschule: Reguläres Halbjahres- und Versetzungszeugnis Klassen 5-9 und 10.1
+[Anlage12u13]
 ZeugnisMitRand=J
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
@@ -32,21 +32,8 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 
-; Anlage 20: Realschule: Überweisungszeugnis
-[Anlage20]
-ZeugnisMitRand=J
-ZeugnisDatumQuelle=E
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenPersonen=S
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=N
-UnterschriftenMitVornamen=N
-UnterschriftenMitVornamenNurErster=N
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-
-; Anlage 21: Realschule: Abgangszeugnis A4 und A3
-[Anlage21]
+; Anlage 14: Hauptschule: Überweisungszeugnis
+[Anlage14]
 ZeugnisMitRand=J
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
@@ -58,8 +45,21 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 
-; Anlagen 22, 23 und 24: Realschule: Abschlusszeugnisse für HA09, HA10 und FOR einschließlich FOR mit Berechtigung zum Besuch der gym. Oberstufe
-[Anlage22u23u24]
+; Anlage 15: Hauptschule: Abgangszeugnis
+[Anlage15]
+ZeugnisMitRand=J
+ZeugnisDatumQuelle=E
+ZeugnisDatumAngabe=30.12.1899
+UnterschriftenPersonen=S
+UnterschriftenMitNachnamen=J
+UnterschriftenMitAmtsbezeichnungen=J
+UnterschriftenMitVornamen=J
+UnterschriftenMitVornamenNurErster=J
+UnterschriftenMitTitel=J
+UnterschriftenMitStvKlassenlehrer=N
+
+; Anlagen 16, 17 und 18: Hauptschule: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
+[Anlagen16u17u18]
 ZeugnisMitRand=J
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
@@ -84,7 +84,7 @@ SchulabschlussQuelle=H
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
-; legt fest, in welcher Jahrgansstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
+; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
 ; Mögliche Angaben: 06 oder 07 
 ;
 ;
