SVWS-Zeugnisse-NRW 2019-12-14
Feste Unterschrift für SL-AL in der INI-Datei ergänzt bei SK,GE,GY,RS
kleinere Fehler im Layout behoben

--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -21,6 +21,7 @@
 ZeugnisDatumQuelle=A
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=A
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -37,6 +38,7 @@ ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=A
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -51,6 +53,7 @@ ZeugnisMitRand=N
 ZeugnisDatumQuelle=F  
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -65,6 +68,7 @@ ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -80,6 +84,7 @@ ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -95,6 +100,7 @@ ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -110,6 +116,7 @@ ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -179,12 +186,20 @@ WPBeginnASDJahrgang=07
 ; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
-;
 ; UnterschriftenPersonen
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt.
-; Mögliche Angaben: S=Schulleitung und Klassenleitung, A=Abteilungsleitung und Klassenleitung
+; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
+; UnterschriftenSLALText einen Wert erhalten.
+; Mögliche Angaben: 
+; S für Schulleitung und Klassenleitung aus Datenbank
+; A	für Abteilungsleitung und Klassenleitung aus Datenbank
+; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
 ;
+; UnterschriftenSLALText
+; ----------------------
+; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
+; den Wert T haben.
+; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
