--- a/SK/kooperativ/Zeugniseinstellungen.ini
+++ b/SK/kooperativ/Zeugniseinstellungen.ini
@@ -23,6 +23,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -40,6 +41,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -57,6 +59,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -74,6 +77,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -91,6 +95,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -108,6 +113,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -125,6 +131,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -142,6 +149,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -159,6 +167,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -176,6 +185,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -194,6 +204,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -211,6 +222,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -228,6 +240,7 @@ ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
