SVWS Zeugnisse Schild-NRW 2019-12-16
Änderungen an den GE,SK Zeugbnisse Versetzuungsvermerke nicht versetzt.
Tippfehler in der Anleitung korrigiert.
Zusätzliche Option für einen festen Text bei SL-AL geschaffen.
Paket HS auf neue INI-Parameter angepasst.

--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -18,7 +18,7 @@
 
 ; Anlage 38: Abschlussprognose Gesamtschule
 [Anlage38]
-ZeugnisDatumQuelle=A
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=A
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
@@ -30,7 +30,7 @@ UnterschriftenMitTitel=J
 
 ; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
-ZeugnisMitRand=N
+ZeugnisMitRand=J
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -45,7 +45,7 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 ; Anlage 41: Überweisungszeugnis Gesamtschule
 [Anlage41]
@@ -60,7 +60,7 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 ; Anlagen 42: Abgangszeugnis Gesamtschule
 [Anlage42]
@@ -76,7 +76,7 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 ; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
 [Anlage43]
@@ -92,7 +92,7 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 ; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
 [Anlage44]
@@ -108,7 +108,7 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 ; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
 [Anlage45]
@@ -124,7 +124,7 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
-WPBeginnASDJahrgang=07
+WPBeginnASDJahrgang=06
 
 
 [Erklaerungen]
@@ -134,102 +134,140 @@ WPBeginnASDJahrgang=07
 ; ZeugnisMitRand
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben: 
+; J = Ja 
+; N = Nein
 ;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgansstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07
+; Mögliche Angaben: 
+; 06 oder 07
 ;
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
 ; Mögliche Angaben:
-; Z=Zeugnisdatum des akt. Lernabschnittes
-; K=Konferenzdatum des akt. Lernabschnittes
-; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
-; E=Entlassdatum
-; S=Schulwechseldatum
-; A=Aktuelles Tagesdatum
-; I=Datum aus INI-Datei
-; F=Abfrage beim Formularaufruf
+; Z = Zeugnisdatum des akt. Lernabschnittes
+; K = Konferenzdatum des akt. Lernabschnittes
+; V = entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
+; E = Entlassdatum
+; S = Schulwechseldatum
+; A = Aktuelles Tagesdatum
+; I = Datum aus INI-Datei
+; F = Abfrage beim Formularaufruf
+;
 ;
 ; ZeugnisDatumAngabe
 ; ------------------
 ; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; Mögliche Angaben: 
+; Datum des Zeugnisses im Kurzformat, also 01.08.2019
+;
 ;
 ; ZeugnisInformationenQuelle
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; Mögliche Angaben: 
+; F = Abfrage beim Formularaufruf, 
+; I = Angaben aus INI-Datei, 
+; D = Datenbank (D ist noch in SchILD zu implementieren)
+;
 ;
 ; ZeugnisInformationenWiederanfangAngabe
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; Mögliche Angabe: 
+; Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+;
 ;
 ; ZeugnisInformationenElternsprechtagAngabe1
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; Mögliche Angabe: 
+; Text mit Datum und Uhrzeiten, z. B. 
+; 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+;
 ;
 ; ZeugnisInformationenElternsprechtagAngabe2
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 
+; 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
 ; UnterschriftenPersonen
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
-; UnterschriftenSLALText einen Wert erhalten.
+; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. 
+; Ist der Wert T gesetzt, muss der Parameter UnterschriftenSLALText einen Wert erhalten.
 ; Mögliche Angaben: 
-; S für Schulleitung und Klassenleitung aus Datenbank
-; A	für Abteilungsleitung und Klassenleitung aus Datenbank
-; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+; S  für Schulleitung und Klassenleitung aus Datenbank
+; A  für Abteilungsleitung und Klassenleitung aus Datenbank
+; T  für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+;
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
-; den Wert T haben.
-; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
+; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. 
+; Dafür muss der Paramater UnterschriftenPersonen den Wert T haben.
+; Mögliche Angaben: 
+; Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. 
+; Beispiel: Max Mustermann, Konrektor
+;
+;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
 ; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben:
+; J = Ja
+; N = Nein
+;
 ;
 ; UnterschriftenMitAmtsbezeichnungen
 ; ----------------------------------
 ; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben:
+; J = Ja
+; N = Nein
+;
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
 ; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben:
+; J = Ja
+; N = Nein
+;
 ;
 ; UnterschriftenMitVornamenNurErster
 ; ----------------------------------
 ; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben:
+; J = Ja
+; N = Nein
+;
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
 ; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben:
+; J = Ja
+; N = Nein
+;
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; Mögliche Angaben: J=Ja und N=Nein
+; Mögliche Angaben: 
+; J = Ja
+; N = Nein
 ;
 ;
 ; SchulabschlussQuelle
@@ -237,6 +275,6 @@ WPBeginnASDJahrgang=07
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen.
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
 ; Mögliche Angaben:
-; H=Eintrag des Abschlusses im aktuellen Halbjahr
-; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
-; F=Abfrage beim Formularaufruf
+; H = Eintrag des Abschlusses im aktuellen Halbjahr
+; L = Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
+; F = Abfrage beim Formularaufruf
