--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -25,6 +25,7 @@ ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -38,6 +39,7 @@ ZeugnisMitRand=J
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -51,6 +53,7 @@ ZeugnisMitRand=J
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -64,6 +67,7 @@ ZeugnisMitRand=J
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
+UnterschriftenSLALText=Schulleiter/in oder Vertretung
 UnterschriftenMitNachnamen=J
 UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
@@ -134,8 +138,18 @@ SchulabschlussQuelle=H
 ; 
 ; UnterschriftenPersonen
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt.
-; Mögliche Angaben: S=Schulleitung und Klassenleitung, A=Abteilungsleitung und Klassenleitung
+; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
+; UnterschriftenSLALText einen Wert erhalten.
+; Mögliche Angaben: 
+; S für Schulleitung und Klassenleitung aus Datenbank
+; A	für Abteilungsleitung und Klassenleitung aus Datenbank
+; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
+;
+; UnterschriftenSLALText
+; ----------------------
+; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
+; den Wert T haben.
+; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
