--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -17,7 +17,7 @@
 
 ; Anlagen 12 und 13: Hauptschule: Reguläres Halbjahres- und Versetzungszeugnis Klassen 5-9 und 10.1
 [Anlage12u13]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -35,7 +35,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 14: Hauptschule: Überweisungszeugnis
 [Anlage14]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -49,7 +49,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 15: Hauptschule: Abgangszeugnis
 [Anlage15]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -63,7 +63,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlagen 16, 17 und 18: Hauptschule: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlagen16u17u18]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
