--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -17,7 +17,7 @@
 
 ; Anlagen 31 und 35: Gymnasium: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-7 und 8-10
 [Anlage31u35]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -35,7 +35,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 32: Gymnasium: Überweisungszeugnis
 [Anlage32]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -49,7 +49,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 33: Gymnasium: Abgangszeugnis
 [Anlage33]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -63,7 +63,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlagen 34, 36 und 37: Gymnasium: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlage34u36u37]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
