Schild-NRW-Zeugnisse 2019-12-22
In den Paketen von GY und SK wurden die Höhe der Subreports der Fächer
auf 22 un die Höhe der Notenfelder auf 20 erhöht.

--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -30,7 +30,7 @@ UnterschriftenMitTitel=J
 
 ; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
