--- a/RS/Zeugniseinstellungen.ini
+++ b/RS/Zeugniseinstellungen.ini
@@ -17,7 +17,7 @@
 
 ; Anlage 19: Realschule: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-10.1
 [Anlage19]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -35,7 +35,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 20: Realschule: Überweisungszeugnis
 [Anlage20]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -49,7 +49,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlage 21: Realschule: Abgangszeugnis A4 und A3
 [Anlage21]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -63,7 +63,7 @@ UnterschriftenMitStvKlassenlehrer=N
 
 ; Anlagen 22, 23 und 24: Realschule: Abschlusszeugnisse für HA09, HA10 und FOR einschließlich FOR mit Berechtigung zum Besuch der gym. Oberstufe
 [Anlage22u23u24]
-ZeugnisMitRand=J
+ZeugnisMitRand=N
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
