Schild-NRW-Zeugnisse 2019-12-24
Finale Versionen der Pakete GY-SK-HS
Kleine Korrekturen im Layout un din der Dokumentation der INI-Dateien

--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 15.11.2019 (Plümper)
-; Enthalten sind die Einstellungen für die Anlagen 31-37 (Gymnasium)
+; Enthalten sind die Einstellungen für die Anlagen 12-18 (Hauptschule)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
