Zeugnisse Schild-NRW 2020-01-07
Kleiner Fehler beim Zeugnisdatum in den Jahreszeugnissen behoben.
Zeugnisdatumquelle in INI auf Z gesetzt.

--- a/SK/Zeugniseinstellungen.ini
+++ b/SK/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 15.11.2019 (Plümper)
-; INI-Datei für die Sek-I Zeugnisse der Sekundarschule (Anlagen 46 - XX)
+; INI-Datei für die Sek-I Zeugnisse der Sekundarschule (Anlagen 46 - 60)
 ;
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -16,7 +16,7 @@
 
 [Anlage46]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
@@ -34,7 +34,7 @@ WPBeginnASDJahrgang=07
 
 [Anlage48und49]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
