--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -18,7 +18,7 @@
 ; Anlagen 31 und 35: Gymnasium: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-7 und 8-10
 [Anlage31u35]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
