--- a/SK/integrativ/Zeugniseinstellungen.ini
+++ b/SK/integrativ/Zeugniseinstellungen.ini
@@ -16,7 +16,7 @@
 
 [Anlage46]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
@@ -34,7 +34,7 @@ WPBeginnASDJahrgang=07
 
 [Anlage48und49]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
