--- a/RS/Zeugniseinstellungen.ini
+++ b/RS/Zeugniseinstellungen.ini
@@ -18,7 +18,7 @@
 ; Anlage 19: Realschule: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-10.1
 [Anlage19]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
