--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 15.11.2019 (Plümper)
+; Format der INI-Datei vom 27.02.2020 (Plümper)
 ; INI-Datei für die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -12,12 +12,11 @@
 ; Für jedes Zeugnis (Anlagen in der BASS) können hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
 ; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zu den Optionen findet sich am Ende der Datei
 ; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
-;
-; Format und Einstellungsdefinitionen vom 04.11.2019 (Plümper)
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ; Anlage 38: Abschlussprognose Gesamtschule
 [Anlage38]
+ZeugnisVorname=V
 ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=A
@@ -27,10 +26,14 @@ UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -46,10 +49,14 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 41: Überweisungszeugnis Gesamtschule
 [Anlage41]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=F  
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -61,10 +68,14 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 42: Abgangszeugnis Gesamtschule
 [Anlage42]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -77,10 +88,14 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
 [Anlage43]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -93,10 +108,14 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
 [Anlage44]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -109,10 +128,14 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
 [Anlage45]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -125,156 +148,154 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; ZeugnisMitRand
+; 
+; ZeugnisMitRand 
 ; --------------
-; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll.
-; Mögliche Angaben: 
-; J = Ja 
-; N = Nein
+; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; FarbeNotenfeld
+; --------------
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
+; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+;
 ;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
-; legt fest, in welcher Jahrgansstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 
-; 06 oder 07
+; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
+; Mögliche Angaben: 06 oder 07 oder 08
 ;
+;
+;
+; ZeugnisVorname
+; -------------------
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; das Feld Vorname verwendet.
+; Mögliche Angaben: 
+; V=Nur das Feld „Vorname“ verwenden 
+; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
+; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
 ; Mögliche Angaben:
-; Z = Zeugnisdatum des akt. Lernabschnittes
-; K = Konferenzdatum des akt. Lernabschnittes
-; V = entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
-; E = Entlassdatum
-; S = Schulwechseldatum
-; A = Aktuelles Tagesdatum
-; I = Datum aus INI-Datei
-; F = Abfrage beim Formularaufruf
-;
+; Z=Zeugnisdatum des akt. Lernabschnittes
+; K=Konferenzdatum des akt. Lernabschnittes 
+; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
+; E=Entlassdatum
+; S=Schulwechseldatum
+; A=Aktuelles Tagesdatum
+; I=Datum aus INI-Datei
+; F=Abfrage beim Formularaufruf
 ;
 ; ZeugnisDatumAngabe
 ; ------------------
 ; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; Mögliche Angaben: 
-; Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; Mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
-;
-; ZeugnisInformationenQuelle
+; ZeugnisInformationenQuelle 
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; Mögliche Angaben: 
-; F = Abfrage beim Formularaufruf, 
-; I = Angaben aus INI-Datei, 
-; D = Datenbank (D ist noch in SchILD zu implementieren)
-;
-;
-; ZeugnisInformationenWiederanfangAngabe
+; Mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; 
+; ZeugnisInformationenWiederanfangAngabe 
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: 
-; Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; Mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
-;
-; ZeugnisInformationenElternsprechtagAngabe1
+; ZeugnisInformationenElternsprechtagAngabe1 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: 
-; Text mit Datum und Uhrzeiten, z. B. 
-; 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
-;
-; ZeugnisInformationenElternsprechtagAngabe2
+; ZeugnisInformationenElternsprechtagAngabe2 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 
-; 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; Mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ;
+; 
 ; UnterschriftenPersonen
 ; ----------------------
-; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. 
-; Ist der Wert T gesetzt, muss der Parameter UnterschriftenSLALText einen Wert erhalten.
+; legt fest, ob der Schulleiter oder der Abteilungsleiter neben dem Klassenlehrer das Zeugnis unterschreibt. Ist der Wert T gesetzt, muss der Parameter 
+; UnterschriftenSLALText einen Wert erhalten.
 ; Mögliche Angaben: 
-; S  für Schulleitung und Klassenleitung aus Datenbank
-; A  für Abteilungsleitung und Klassenleitung aus Datenbank
-; T  für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
-;
+; S für Schulleitung und Klassenleitung aus Datenbank
+; A	für Abteilungsleitung und Klassenleitung aus Datenbank
+; T	für Text bei der Schulleitung/Abteilungsleitung aus der INI und Klassenleitung aus Datenbank
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. 
-; Dafür muss der Paramater UnterschriftenPersonen den Wert T haben.
-; Mögliche Angaben: 
-; Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. 
-; Beispiel: Max Mustermann, Konrektor
-;
+; legt den Text fest, der unter der Unterschriftenlinie der Schulleitung/Abteilungsleitung gedruckt wird. Dafür muss der Paramater UnterschriftenPersonen
+; den Wert T haben.
+; Mögliche Angaben: Text, der unter der Unterschriftenlinie gedruckt werden soll. Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
 ; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; Mögliche Angaben:
-; J = Ja
-; N = Nein
+; Mögliche Angaben: J=Ja und N=Nein
 ;
-;
-; UnterschriftenMitAmtsbezeichnungen
+; UnterschriftenMitAmtsbezeichnungen 
 ; ----------------------------------
 ; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben:
-; J = Ja
-; N = Nein
-;
+; Mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
 ; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben:
-; J = Ja
-; N = Nein
+; Mögliche Angaben: J=Ja und N=Nein
 ;
-;
-; UnterschriftenMitVornamenNurErster
+; UnterschriftenMitVornamenNurErster 
 ; ----------------------------------
 ; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
-; Mögliche Angaben:
-; J = Ja
-; N = Nein
-;
+; Mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
 ; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
-; Mögliche Angaben:
-; J = Ja
-; N = Nein
-;
+; Mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; Mögliche Angaben: 
-; J = Ja
-; N = Nein
+; Mögliche Angaben: J=Ja und N=Nein
 ;
 ;
 ; SchulabschlussQuelle
 ; ------------------
-; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen.
+; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
 ; Mögliche Angaben:
-; H = Eintrag des Abschlusses im aktuellen Halbjahr
-; L = Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
-; F = Abfrage beim Formularaufruf
+; H=Eintrag des Abschlusses im aktuellen Halbjahr
+; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
+; F=Abfrage beim Formularaufruf
+;
+;
+;
+; SchriftenInPDFEinbetten
+; -----------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; UnicodeInPDFVerwenden
+; ---------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
