Erweiterung der INI-Optionen und Einbindung neuer Vermerke aus Schild für Förderung und Versetzung
•	Das Feld Name auf den Zeugnissen wurde auf das DB-Text-Feld VornameName umgestellt.
•	Neue INI- Einstellungen: A3ZeugnisSeiten14Ausblenden, FarbeNotenfeld, ZeugnisVorname, SchriftenInPDFEinbetten, UnicodeInPDFVerwenden. Entsprechend wurde das Programm ZeugniseinstellungenLaden im Hauptbereicht angepasst.
•	FarbeNotenfeld erforderte in jedem Subreport das Ergänzen des OnPrint Ereignisses des Notenfeldes und zuweisen der Color.
•	ZeugnisVorname erforderte überall, wo Namen gedruckt werden (Zeugniskopf, Programm PlatzhalterErsetzen im Hauptbericht, Versetzungsmerke) die Ersetzung des Vornamens.
•	Die Zeugnisbemerkungen werten nun die individuellen Förderbemerkungen aus. Es werden KEINE Texte diesbezüglich mehr vom Zeugnis unter Bemerkungen generiert.
•	Die Versetzungsbemerkungen werten nun die individuellen Versetzungsbemerkungen aus. Ist dort kein Text eingetragen, so werden die bisherigen Standardbemerkungen generiert.
•	Bei den A3 Zeugnissen werden nun je nach A3ZeugnisSeiten14Ausblenden die Seiten 1 und 4 ausgeblendet (im Hauptbericht > ReportBeforePrint). Gleichzeitig wird damit der DuplexDruck deaktiviert.

--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 11.12.2019 (Plümper)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
 ; Enthalten sind die Einstellungen für die Anlagen 31-37 (Gymnasium)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -13,11 +13,13 @@
 ; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zur den Optionen findet sich am Ende der Datei
 ; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-
-
+;
+;
 ; Anlagen 31 und 35: Gymnasium: Regulares Halbjahres- und Versetzungszeugnis Klassen 5-7 und 8-10
 [Anlage31u35]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
@@ -32,10 +34,14 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 32: Gymnasium: Überweisungszeugnis
 [Anlage32]
 ZeugnisMitRand=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -46,10 +52,15 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlage 33: Gymnasium: Abgangszeugnis
 [Anlage33]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -60,10 +71,15 @@ UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 ; Anlagen 34, 36 und 37: Gymnasium: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlage34u36u37]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
+FarbeNotenfeld=192,192,192
+ZeugnisVorname=V
 ZeugnisDatumQuelle=E
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenPersonen=S
@@ -75,22 +91,47 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
+SchriftenInPDFEinbetten=N
+UnicodeInPDFVerwenden=N
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
+; 
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
+; A3ZeugnisSeiten14Ausblenden 
+; ------------------------------------------
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; FarbeNotenfeld
+; --------------
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
+; Mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
+;
+;
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; Mögliche Angaben: 06 oder 07 
+; Mögliche Angaben: 06 oder 07 oder 08
 ;
+;
+;
+; ZeugnisVorname
+; -------------------
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld „Weitere Vornamen“
+; das Feld Vorname verwendet.
+; Mögliche Angaben: 
+; V=Nur das Feld „Vorname“ verwenden 
+; W=Das Feld „Vorname“ durch Anhängen des Feldes „Weitere Vornamen“ ergänzen
+; A=Nur das Feld „Weitere Vornamen“ verwenden, es wird damit als „ALLE Vornamen“ interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
@@ -191,3 +232,19 @@ SchulabschlussQuelle=H
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
 ; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
+;
+;
+;
+; SchriftenInPDFEinbetten
+; -----------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; UnicodeInPDFVerwenden
+; ---------------------
+; legt fest, ob bei der Erzeugung der PDF-Dateien für Texte die Unicode-Codierung verwendet werden soll.
+; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groß werden.
+; Mögliche Angaben: J=Ja und N=Nein
+;
+;
