Erweiterung der INI-Optionen und Einbindung neuer Vermerk aus SchILD
•	Das Feld Name auf den Zeugnissen wurde auf das DB-Text-Feld VornameName umgestellt.
•	Neue INI- Einstellungen: A3ZeugnisSeiten14Ausblenden, FarbeNotenfeld, ZeugnisVorname, SchriftenInPDFEinbetten, UnicodeInPDFVerwenden. Entsprechend wurde das Programm ZeugniseinstellungenLaden im Hauptbereicht angepasst.
•	FarbeNotenfeld erforderte in jedem Subreport das Ergänzen des OnPrint Ereignisses des Notenfeldes und zuweisen der Color.
•	ZeugnisVorname erforderte überall, wo Namen gedruckt werden (Zeugniskopf, Programm PlatzhalterErsetzen im Hauptbericht, Versetzungsmerke) die Ersetzung des Vornamens.
•	Die Zeugnisbemerkungen werten nun die individuellen Förderbemerkungen aus. Es werden KEINE Texte diesbezüglich mehr vom Zeugnis unter Bemerkungen generiert.
•	Die Versetzungsbemerkungen werten nun die individuellen Versetzungsbemerkungen aus. Ist dort kein Text eingetragen, so werden die bisherigen Standardbemerkungen generiert.
•	Bei den A3 Zeugnissen werden nun je nach A3ZeugnisSeiten14Ausblenden die Seiten 1 und 4 ausgeblendet (im Hauptbericht > ReportBeforePrint). Gleichzeitig wird damit der DuplexDruck deaktiviert.

--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -2,7 +2,7 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 27.02.2020 (Plümper)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
 ; Enthalten sind die Einstellungen für die Anlagen 31-37 (Gymnasium)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -58,6 +58,7 @@ UnicodeInPDFVerwenden=N
 ; Anlage 33: Gymnasium: Abgangszeugnis
 [Anlage33]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -76,6 +77,7 @@ UnicodeInPDFVerwenden=N
 ; Anlagen 34, 36 und 37: Gymnasium: Abschlusszeugnisse für HA, HA10 und FOR einschließlich Berechtigung gym. Oberstufe
 [Anlage34u36u37]
 ZeugnisMitRand=N
+A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
 ZeugnisDatumQuelle=E
@@ -100,6 +102,12 @@ UnicodeInPDFVerwenden=N
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
+; Mögliche Angaben: J=Ja und N=Nein
+;
+; A3ZeugnisSeiten14Ausblenden 
+; ------------------------------------------
+; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
+; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
 ; Mögliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
